# from-pixels-to-blocks

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: 3DObjectCreator.hpp  Function.hpp  ImageProcessing.hpp
shaders/: fragment.glsl  vertex.glsl
src/: 3DObjectCreator.cpp  Function.cpp  ImageProcessing.cpp  main.cpp
